--- a/templates/regster.html
+++ b/templates/regster.html
@@ -47,4 +47,8 @@
             {% include "inc/single_tag.html" %}
         {% endfor %}
     </div>
+    <div>
+        <h2 class="mt-5"> Best Members </h2>
+
+    </div>
 {% endblock tags %}
