--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,20 @@
+body {
+    background-color: #F0FFF0;
+}
+
+.bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+}
+
+@media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+    }
+}
 
 .question {
     background-color: white;
@@ -5,6 +22,26 @@
     border-radius: 4px;
     margin: 15px;
     padding: 10px;
+}
+
+.answer {
+    background-color: white;
+    border: 2px solid gray;
+    border-radius: 4px;
+    margin: 15px 15px 15px 40px;
+    padding: 10px;
+}
+
+.solution {
+    height: 50px;
+    width: 50px;
+}
+
+.solution img {
+     max-width: 100%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .avatar {
@@ -23,6 +60,7 @@
 .counter img {
     width: 100%;
 }
+
 .counter {
     padding-left: calc(var(--bs-gutter-x) * .5);
     max-width: 100%;
@@ -36,8 +74,15 @@
     text-align: center;
 }
 
-.question-meta{
+.question-meta {
     height: 60px;
+}
+.answer_input_label {
+    font-size: 28px;
+}
+.green-border-focus .form-control:focus {
+    border: 1px solid #8bc34a;
+    box-shadow: 0 0 0 0.2rem rgba(139, 195, 74, .25);
 }
 
 .authorized {
@@ -46,7 +91,7 @@
     display: inline-flex;
 }
 
-.avatar-auth{
+.avatar-auth {
     width: 70px;
     margin-right: 30px;
 }
@@ -55,8 +100,6 @@
     width: 100%;
     object-fit: cover;
 }
-
-
 
 
 .header-green {
@@ -90,9 +133,11 @@ form > .form-group {
     border-radius: 3px;
     float: left;
 }
+
 .sign-in {
     margin-top: 60px;
 }
-#customFile{
+
+#customFile {
     max-width: 300px;
 }
