--- a/templates/question.html
+++ b/templates/question.html
@@ -2,7 +2,9 @@
 {% load static %}
 {% block content %}
     <h2 class="mt-5">Question</h2>
-    {% include "inc/single_question.html" %}
+
+    {% include 'inc/question_pg.html' %}
+
 
 
     <h3 class="mt-5" id="answers_list"> Answers</h3>
