--- a/templates/inc/single_question.html
+++ b/templates/inc/single_question.html
@@ -9,28 +9,34 @@
             <div class="row counter">
                 <div class="col-3">
                     <a href="#">
-                         <img src="{% static '/img/arrow-down.svg' %}" alt="">
+                        <img src="{% static '/img/arrow-down.svg' %}" alt="">
                     </a>
                 </div>
                 <div class="col-6">
-                    228
+                    <span>100</span>
                 </div>
                 <div class="col-3">
                     <a href="#">
-                         <img src="{% static '/img/arrow-up.svg' %}" alt="">
+                        <img src="{% static '/img/arrow-up.svg' %}" alt="">
                     </a>
                 </div>
             </div>
         </div>
         <div class="col-10">
-            <h3><a href="{% url "single_q" question.q_num %}">{{ question.title }}</a></h3>
-            <p>{{ question.text }}</p>
+            <h3><a class="header-green" href="{% url "single_q" question.q_num %}">{{ question.title }}</a></h3>
+            <p class="question_text">{{ question.text }}</p>
             <div class="row align-items-end question-meta">
-                <div class="col">
+                <div class="col mb-5">
                     <a href="{% url "single_q" question.q_num %}#answers_list"> Answers (228)</a>
                 </div>
-                <div class="col">
-                    Tags:
+                <div class="col mb-5">
+                    <span class="header-green tags_title">Tags: </span>
+                    <div>
+                        <a class="tag_in_question">Tag#1</a>
+                        <a class="tag_in_question">Tag#1</a>
+                        <a class="tag_in_question">Tag#1</a>
+                    </div>
+
                 </div>
             </div>
         </div>
