--- a/templates/inc/paginator.html
+++ b/templates/inc/paginator.html
@@ -1,16 +1,28 @@
 {% load static %}
 <footer class="mt-auto py-3">
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-                <li class="page-item disabled">
-                    <a class="page-link">Previous</a>
-                </li>
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            {% if questions.has_previous %}
                 <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
+                    <a class="page-link disabled" href="?page={{ questions.previous_page_number }}">Previous</a>
                 </li>
-            </ul>
-        </nav>
-    </footer>
+                <li class="page-item">
+                    <a class="page-link disabled" href="?page={{ questions.previous_page_number }}">{{ questions.previous_page_number }}</a>
+                </li>
+            {% endif %}
+
+            <li class="page-item active">
+                <a class="page-link " href="#"> {{ questions.number }}</a>
+            </li>
+
+            {% if questions.has_next %}
+                <li class="page-item">
+                    <a class="page-link disabled" href="?page={{ questions.next_page_number }}">{{ questions.next_page_number }}</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link disabled" href="?page={{ questions.next_page_number }}">Next</a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
+</footer>
