--- a/templates/inc/question_pg.html
+++ b/templates/inc/question_pg.html
@@ -5,20 +5,9 @@
             <div class="avatar">
                 <img src="{% static '/img/avatar-2.png' %}" alt="">
             </div>
-            <div class="row counter">
-                <div class="col-3">
-                    <a href="#">
-                        <img src="{% static '/img/arrow-down.svg' %}" alt="">
-                    </a>
-                </div>
-                <div class="col-6">
-                    228
-                </div>
-                <div class="col-3">
-                    <a href="#">
-                        <img src="{% static '/img/arrow-up.svg' %}" alt="">
-                    </a>
-                </div>
+             <div class="counter">
+                <img src="{% static '/img/heart.svg' %}" alt="">
+                <span>100</span>
             </div>
         </div>
         <div class="col-10">
