--- a/templates/inc/single_tag.html
+++ b/templates/inc/single_tag.html
@@ -1,5 +1,5 @@
 {% load static %}
 
 <div class="tag">
-    <h4><a href ="{% url "single_tag" tag.t_num %}"> {{ tag.name }}</a> </h4>
+    <h4><a href ="{% url "single_tag" tag.id %}"> {{ tag.title }}</a> </h4>
 </div>
