--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,5 @@
 {% endblock content %}
 
 {% block tags %}
-    <h2 class="header-green"> Popular Tags </h2>
-    <div class="tagcontainer">
-        {% for tag in tags %}
-            {% include "inc/single_tag.html" %}
-        {% endfor %}
-    </div>
-    <div>
-        <h2 class="header-green mt-5"> Best Members </h2>
-
-    </div>
+   {% include 'inc/best_tags_members.html' %}
 {% endblock tags %}
