--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,13 +33,5 @@
 {% endblock content %}
 
 {% block tags %}
-    <h2 class="mt-5"> Tags </h2>
-    <div class="tagcontainer">
-        {% for tag in tags %}
-            {% include "inc/single_tag.html" %}
-        {% endfor %}
-    </div>
-    <div class="mt-5">
-        <h2> Best Members </h2>
-    </div>
+    {% include 'inc/best_tags_members.html' %}
 {% endblock tags %}
