--- a/templates/question.html
+++ b/templates/question.html
@@ -24,13 +24,5 @@
 
 
 {% block tags %}
-    <h2 class="mt-5"> Tags </h2>
-    <div class="tagcontainer">
-        {% for tag in tags %}
-            {% include "inc/single_tag.html" %}
-        {% endfor %}
-    </div>
-    <div>
-        <h2 class="mt-5"> Best Members </h2>
-    </div>
+    {% include 'inc/best_tags_members.html' %}
 {% endblock tags %}
