--- a/templates/inc/base.html
+++ b/templates/inc/base.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
 
-
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -66,6 +65,7 @@
 
             <div class="col-3">
                 {% block tags %}
+                    {% include 'inc/best_tags_members.html' %}
                 {% endblock tags %}
             </div>
         </div>
