--- a/templates/inc/base.html
+++ b/templates/inc/base.html
@@ -44,12 +44,13 @@
                         <img src="{% static '/img/avatar-2.png' %}" alt="">
                     </div>
                     <div class="username">
-                        <a href="{% url "profile" 1 %}"> Username </a>
+                        <div class="">
+                            <a href="{% url "profile" 1 %}"> Username </a>
+                        </div>
+                         <a href="{% url "login_page"  %}"> Log out </a>
                     </div>
                 </div>
             </div>
-
-
         </div>
     </nav>
 </header>
@@ -77,7 +78,5 @@
         <span class="text-muted">Created by Larkin Egor</span>
     </div>
 </footer>
-
-
 </body>
 </html>
