--- a/templates/inc/question_pg.html
+++ b/templates/inc/question_pg.html
@@ -3,7 +3,11 @@
     <div class="row">
         <div class="col-2">
             <div class="avatar">
-                <img src="{% static '/img/avatar-2.png' %}" alt="">
+                {% if question.get_author.avatar %}
+                    <img src="{{ question.get_author.avatar.url }}" alt="">
+                {% else %}
+                    <img src="{% static 'img/default.png' %}" alt="">
+                {% endif %}
             </div>
             <div class="counter">
                 <img src="{% static '/img/heart.svg' %}" alt="">
@@ -23,7 +27,7 @@
             by: {{ question.get_username }}</a></h4>
     </div>
     <div class="col-4">
-    <span class="header-green" style="font-size: 20px">Tags: </span>
+        <span class="header-green" style="font-size: 20px">Tags: </span>
         {% for tag in question.get_tags %}
             <a class="tag_in_question" href="{% url "single_tag" tag.title %}">{{ tag.title }}</a>
         {% endfor %}
