--- a/templates/inc/single_answer.html
+++ b/templates/inc/single_answer.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% if answer.solution%}
+{% if answer.solution %}
     <div class="solution">
         <img src="{% static '/img/solution.png' %}" alt="">
     </div>
@@ -9,9 +9,13 @@
     <div class="row">
         <div class="col-2">
             <div class="avatar">
-                <img src="{% static '/img/avatar-2.png' %}" alt="">
+                {% if answer.get_author.avatar %}
+                    <img src="{{ answer.get_author.avatar.url }}" alt="">
+                {% else %}
+                    <img src="{% static 'img/default.png' %}" alt="">
+                {% endif %}
             </div>
-             <div class="counter">
+            <div class="counter">
                 <img src="{% static '/img/heart.svg' %}" alt="">
                 <span>{{ answer.get_like_count }}</span>
             </div>
@@ -23,7 +27,8 @@
     <hr>
     <div class="row">
         <div class="col-6 ">
-            <h6><a class="name_by_question" href="{% url "profile" answer.author.id%}"> Answer by: {{ answer.get_username }}</a></h6>
+            <h6><a class="name_by_question" href="{% url "profile" answer.author.id %}"> Answer
+                by: {{ answer.get_username }}</a></h6>
         </div>
         <div class="col-6">
             <h6 class="pub_date">Publication date: {{ question.date }}</h6>
