--- a/templates/inc/single_question.html
+++ b/templates/inc/single_question.html
@@ -4,7 +4,11 @@
     <div class="row">
         <div class="col-2">
             <div class="avatar">
-                <img src="{% static '/img/avatar-2.png' %}" alt="">
+               {% if question.get_author.avatar %}
+                    <img src="{{ question.get_author.avatar.url }}" alt="">
+                {% else %}
+                    <img src="{% static 'img/default.png' %}" alt="">
+                {% endif %}
             </div>
             <div class="counter">
                 <img src="{% static '/img/heart.svg' %}" alt="">
