--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,11 @@
         <div class="row">
             <div class="col-4 ">
                 <div class="profile_avatar">
-                    <img src="{% static '/img/avatar-2.png' %}" alt="">
+                    {% if user.avatar %}
+                        <img src="{{ user.avatar.url }}" alt="">
+                    {% else %}
+                        <img src="{% static 'img/default.png' %}" alt="">
+                    {% endif %}
                 </div>
             </div>
             <div class="col-8 user_info">
