--- a/templates/question.html
+++ b/templates/question.html
@@ -11,6 +11,7 @@
         {% include "inc/single_answer.html" %}
     {% endfor %}
 
+    {% include 'inc/paginator.html' %}
 
     <div class="form-group green-border-focus mt-5">
         <label class="mb-2 answer_input_label" for="answer_input_form">Answer the question</label>
