--- a/templates/login.html
+++ b/templates/login.html
@@ -9,13 +9,8 @@
             <h4 class="card-title mb-4 mt-1">Sign in</h4>
             <form action="/login/" method="post">
                 <div class="form-group">
+                    {% csrf_token %}
                     {% bootstrap_form form %}
-                    <label for="username">Your username</label>
-                    <input name="username" class="form-control" placeholder="Username" type="text">
-                </div>
-                <div class="form-group">
-                    <label>Your password</label>
-                    <input class="form-control" placeholder="******" type="password">
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block"> Login</button>
